# AttackFridayMonsters

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  exporter.cake  importer.cake  postbuild-xdelta.ps1  postbuild-xdelta.sh
.devcontainer/: devcontainer.json
CMakeModules/: 3dsFonts.cmake  3dsImages.cmake  3dsRoms.cmake  AttackFridayMonsters.cmake  CSharpProject.cmake  CSharpTarget.cmake
Compiler/: CMakeLists.txt  compile.sh  decompile.sh  generate.sh
Decompiler/: CMakeLists.txt  build.cake
Docs/: DARC.md  OFS3.md  Script.md
Programs/: CMakeLists.txt  code_text.yml  extract_scripts.sh
Programs/AttackFridayMonsters/: AttackFridayMonsters.sln  StyleCop.ruleset
Programs/AttackFridayMonsters/AttackFridayMonsters/: AttackFridayMonsters.csproj  Decompiler.cs  Program.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/: AttackFridayMonsters.Formats.csproj  ExternalProgramConverter.cs  ExternalProgramNodeConverter.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Compression/: Lz11Decompression.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Container/: DarcToBinary.cs  Ofs3ToBinary.cs  Ofs3ToBinaryConverter.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Properties/: AssemblyInfo.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Text/: BclytToPo.cs  Binary2Clyt.cs  BinaryStrings2Po.cs  CardDataToPo.cs  Clyt.cs  Clyt2Binary.cs  Clyt2Po.cs  Clyt2Xml.cs  Clyt2Yml.cs  EpisodeSettingsToPo.cs  Po2Clyt.cs  ScriptBlock2Po.cs  ScriptToPo.cs  Yml2Clyt.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Text/Code/: BinaryStrings2Po.cs  Code3dsPoImporter.cs  MemoryBlock.cs  StringDefinition.cs  StringDefinitionBlock.cs  Subpointer.cs
Programs/AttackFridayMonsters/AttackFridayMonsters.Formats/Text/Layout/: Clyt.cs  ClytYml.cs  Group.cs  LayoutDefinition.cs  LayoutOrigin.cs  Material.cs  Panel.cs  PanelFlags.cs  PanelMagnificationFlags.cs  PanelYml.cs  Picture.cs  Size.cs  TextSection.cs  TextureFilter.cs  TextureMapEntry.cs  TextureMatrixEntry.cs  Vector2.cs  Vector3.cs  Window.cs  WrapMode.cs
Programs/AttackFridayMonsters/AttackFridayMonsters/Properties/: AssemblyInfo.cs
Programs/CMakeModules/: CSharpProject.cmake
Programs/CUETools/: blz.c  lzx.c
Programs/Ghidra/: ExportDefinedStrings.java
Programs/Patcher/: .editorconfig  Patcher.sln  nuget.config
Programs/Patcher/Patcher/: Logger.cs  Patcher.csproj
Programs/Patcher/Patcher.Gtk/: Patcher.Gtk.csproj  Program.cs
Programs/Patcher/Patcher.Mac/: Info.plist  Patcher.Mac.csproj  Program.cs
Programs/Patcher/Patcher.Wpf/: Patcher.Wpf.csproj  Program.cs
Programs/Patcher/Patcher/Patching/: FilePatchStatus.cs  FileStreamFactory.cs  GameExporterLayeredFs.cs  GameNode.cs  GamePatch.cs  GamePatcher.cs  GameVerifier.cs  InvalidFileInfo.cs  InvalidFileReason.cs  PatchInfo.cs
Programs/Patcher/Patcher/Resources/: .gitignore  L10n.cs  LocalizationManager.cs  ResourcesName.cs  es.po  patches.json
Programs/Patcher/Patcher/ViewModels/: MainViewModel.cs  PatchScene.cs  PatcherViewModel.cs  TargetDevice.cs
Programs/Patcher/Patcher/Views/: CreditsDialog.cs  MainForm.cs  PatchDialog.cs
Programs/Weblate/: aofm.py
Programs/xdelta/: CMakeLists.txt
